# netcalc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_install.sh  check_ip.c  install_manifest.txt.in  main.cpp  makefile  netcalc  octet.h  snapcraft.yaml  uninstall  uninstall.cmake.in
resources/: netcalc.desktop
src/: CMakeLists.txt  broadcast.cpp  check_ip.cpp  check_ip.h  check_prefix.cpp  check_prefix.h  check_validate_arguments.cpp  commands.c  convert_numbers.cpp  convert_numbers.h  get_network_addresses.cpp  get_network_addresses.h  gtk.c  ipOperations.c  ip_operations.cpp  ip_operations.h  main.c  main.cpp  netInterfaces.c  netmask.cpp  netmask.h  network.cpp  octet.cpp  output.cpp  output.h  output_messages.cpp  outputs.c  sdbus.c  segmentForOctet.c  strings.c  validArguments.c
src/gtk/: gtkMain.c  gtkNetInterfaces.c  gtkOutputSignals.c
src/gtk/headers/: gtkMain.h  gtkNetInterfaces.h  gtkOutputSignals.h
src/headers/: broadcast.h  check_ip.h  check_prefix.h  check_validate_arguments.h  commands.h  convert_numbers.h  get_network_addresses.h  gtk.h  ipOperations.h  ip_operations.h  netInterfaces.h  netmask.h  network.h  octet.h  output.h  output_messages.h  outputs.h  sdbus.h  segmentForOctet.h  strings.h  validArguments.h
